@@ -70,6 +70,8 @@ Changelog
  * Fix: `wagtail.contrib.sitemaps` no longer depends on SiteMiddleware (Matt Westcott)
  * Fix: Purge image renditions cache when renditions are deleted (Pascal Widdershoven, Matt Westcott)
  * Fix: Image / document forms now display non-field errors such as `unique_together` constraints (Matt Westcott)
+ * Remove unidecode and use anyascii in wagtail.core.utils.string_to_ascii
+
 
 
 2.9.2 (03.07.2020)
